# log430-a25-labo3

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/views/: activity.puml
rapport/: rapport.md
scripts/: supplier_app.py
src/: store_manager.py  sync_redis.py
src/stocks/commands/: write_stock.py
src/stocks/queries/: read_stock.py
src/stocks/schemas/: product.py  query.py
tests/: test_store_manager.py
